<resources>
    <string name="app_name">Assignment1</string>
    <string name = "game_name"> Dice Game</string>
    <string name="btn_new">New Game</string>
    <string name="btn_about">ABOUT</string>
    <string name="popup">
        Student ID: w1867122
        Name: Dineeka Wimalarathne

        I confirm that I understand what plagiarism is and have read and
understood the section on Assessment Offences in the Essential
Information for Students. The work that I have submitted is
entirely my own. Any work from other authors is duly referenced
and acknowledged.
</string>
    <string name="human_text">You</string>
    <string name="game_text">Computer</string>
    <string name="throw_name">Throw</string>
    <string name="score_name">Score</string>
    <string name="score_description">User/Computer</string>
    <string name="live_score">0/0</string>
</resources>