<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_description"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="240dp"
        />

    <TextView
        android:id="@+id/liveScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/live_score"
        android:textSize="22sp"
        android:layout_marginStart="320dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_text"
            android:textSize="24sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        >

        <ImageView
            android:id="@+id/compDieOne"
            android:layout_width="55dp"
            android:layout_height="55dp"

            />

        <ImageView
            android:id="@+id/compDieTwo"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            />

        <ImageView
            android:id="@+id/compDieThree"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            />

        <ImageView
            android:id="@+id/compDieFour"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            />
        <ImageView
            android:id="@+id/compDieFive"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        >

        <ImageView
            android:id="@+id/userDieOne"
            android:layout_width="55dp"
            android:layout_height="55dp"
            />

        <ImageView
            android:id="@+id/userDieTwo"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            />

        <ImageView
            android:id="@+id/userDieThree"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            />

        <ImageView
            android:id="@+id/userDieFour"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            />
        <ImageView
            android:id="@+id/userDieFive"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/human_text"
            android:textSize="24sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp">

        <Button
            android:id="@+id/throwBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/throw_name" />

        <Button
            android:id="@+id/scoreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:enabled="false"
            android:text="@string/score_name" />
    </LinearLayout>


</LinearLayout>